# Image-proccesing

./: .gitignore  .pre-commit-config.yaml  INSTRUCTION.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: copilot-instructions.md
configs/: cifar10_baseline.yaml  imagenet_subset_baseline.yaml
configs/aug/: strong.yaml  weak.yaml
configs/sweeps/: hparams.yaml
notebooks/: colab_quickstart.ipynb
scripts/: build_robust_dataset.py  evaluate.py  prepare_imagenet_subset.py  serve_progress.py  sweep.py  train.py  validate_own_dataset.py
src/xai_proj_b/: cli.py
src/xai_proj_b.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xai_proj_b/data/: __init__.py  datasets.py  loaders.py  transforms.py
src/xai_proj_b/eval/: evaluate.py  robustness.py  robustness_dataset.py
src/xai_proj_b/models/: factory.py  heads.py
src/xai_proj_b/train/: callbacks.py  loop.py  metrics.py
src/xai_proj_b/utils/: checkpoint.py  config.py  logging.py  seed.py  system_stats.py
tests/: conftest.py  test_cli.py  test_datasets.py  test_reproducibility.py  test_transforms.py
web/: progress_dashboard.html
web/progress-dashboard/: package-lock.json  package.json  run-build-start.cmd  tmp-check.js  tsconfig.json
web/progress-dashboard/app/: globals.css  layout.tsx  page.tsx
web/progress-dashboard/app/api/system/: route.ts
web/progress-dashboard/components/: StatCard.tsx
web/progress-dashboard/types/: progress.ts  system.ts
