[project]
name = "xai-proj-b"
version = "0.1.0"
description = "Reproducible vision training pipeline for CIFAR-10, ImageNet subset, and robustness studies."
requires-python = ">=3.10"
authors = [{ name = "Elahe" }]
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "timm>=1.0",
  "torchmetrics>=1.2",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "opencv-python>=4.8",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "wandb>=0.16",
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.12",
  "ruff>=0.4",
]

[project.scripts]
xai-proj-b = "xai_proj_b.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

